# c-tutorial

./: CMakeLists.txt  README.md
01-first-c-program/: hello.c
src/02-data-type/: data-type.c  printf.c
src/03-variable/: 03-variable.c
src/04-operator/: operator.c
